--- a/style.css
+++ b/style.css
@@ -1,12 +1,25 @@
-.movie_poster{
-  width: 150px;
-  height: 221px;
-}
 
 #container{
-
+  width:100%;
+  height: 100%;
 }
 
 #center_column{
-  
+  height: 100%;
+}
+
+img{
+  width: 150px;
+  height: 221px;
+  display: block;
+  margin:0px auto;
+}
+#titleClass{
+  text-align: center;
+}
+@media(max-width:600px){
+  img{
+    width: auto;
+    height: auto;
+  }
 }
